--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
   publish:
     permissions:
       contents: write
-    needs: [test, binary]
+    needs: [binary]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
