--- a/.github/actions/cargo-publish/action.yml
+++ b/.github/actions/cargo-publish/action.yml
@@ -29,7 +29,13 @@ runs:
       with:
         command: login
         args: -- ${{ inputs.cargo-registry-token }}
-
+    - run: gh release delete --yes Unreleased || exit 0
+      if: >
+        github.event_name == 'push' && (
+          github.ref == format('refs/heads/{0}', github.event.repository.default_branch) ||
+          startsWith(github.ref, 'refs/tags/v')
+        )
+      shell: bash
     - name: Create GitHub release
       if: >
         github.event_name == 'push' && (
