--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,10 +32,10 @@ jobs:
     strategy:
       matrix:
         include:
-          - { target: x86_64-apple-darwin,              os: macos-10.15 }
+          #- { target: x86_64-apple-darwin,              os: macos-10.15 }
           - { target: x86_64-unknown-linux-gnu,         os: ubuntu-latest }
           - { target: x86_64-unknown-linux-musl,        os: ubuntu-latest }
-          - { target: x86_64-pc-windows-msvc,           os: windows-2019 }
+          #- { target: x86_64-pc-windows-msvc,           os: windows-2019 }
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/setup-rust
