--- a/.github/actions/cargo-publish/action.yml
+++ b/.github/actions/cargo-publish/action.yml
@@ -29,6 +29,8 @@ runs:
       with:
         command: login
         args: -- ${{ inputs.cargo-registry-token }}
+      env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - run: gh release delete --yes Unreleased || exit 0
       if: >
         github.event_name == 'push' && (
