--- a/.github/actions/cargo-publish/action.yml
+++ b/.github/actions/cargo-publish/action.yml
@@ -34,7 +34,7 @@ runs:
         args: -- ${{ inputs.cargo-registry-token }}
       env:
           GITHUB_TOKEN: ${{ inputs.github-token }}
-    - run: gh release delete --yes Unreleased || exit 0
+    - run: gh release delete --yes Unreleased
       if: >
         github.event_name == 'push' && (
           github.ref == format('refs/heads/{0}', github.event.repository.default_branch)
