--- a/.github/actions/cargo-publish/action.yml
+++ b/.github/actions/cargo-publish/action.yml
@@ -34,12 +34,15 @@ runs:
         args: -- ${{ inputs.cargo-registry-token }}
       env:
           GITHUB_TOKEN: ${{ inputs.github-token }}
-    - run: gh release delete --yes Unreleased
+    - run: gh release delete --yes Unreleased || exit 0
       if: >
         github.event_name == 'push' && (
           github.ref == format('refs/heads/{0}', github.event.repository.default_branch)
         )
       shell: bash
+      env:
+        GITHUB_TOKEN: ${{ inputs.github-token }}
+        
     - name: Create GitHub release
       if: >
         github.event_name == 'push' && (
