--- a/.github/actions/cargo-publish/action.yml
+++ b/.github/actions/cargo-publish/action.yml
@@ -16,7 +16,7 @@ runs:
       uses: mindsers/changelog-reader-action@v2.0.0
       with:
         # validation_depth: 10
-        version: ${{ (github.ref_type == 'tag' && !contains('-', github.ref_name) && github.ref_name) || 'Unreleased' }}
+        version: ${{ (github.ref_type == 'tag' && !contains(github.ref_name, '-',) && github.ref_name) || 'Unreleased' }}
         path: ./CHANGELOG.md
 
     - name: Download artifacts
