--- a/.github/actions/cargo-publish/action.yml
+++ b/.github/actions/cargo-publish/action.yml
@@ -51,7 +51,7 @@ runs:
       with:
         tag_name: ${{ (github.ref_type == 'tag' && github.ref_name) || 'Unreleased' }}
         body: ${{ steps.changelog-reader.outputs.changes }}
-        prerelease: ${{ steps.changelog-reader.outputs.status == 'prereleased' }}
+        prerelease: ${{ startsWith(github.ref, 'refs/tags/v') && contains(github.ref_name, '-') }}
         draft: ${{ !startsWith(github.ref, 'refs/tags/v') && steps.changelog-reader.outputs.status == 'unreleased' }}
         files: |
           ${{ steps.download-artifacts.outputs.download-path }}/*/*
