--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,6 @@ description = "A test crate"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+
+[features]
+hello = []
